remove redundant apis, models, tags; add caa, operational category, and update model fields
