# docs/demo/openapi.yaml
@@ -40,20 +40,11 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/UasType'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/UasType'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/UasType'
         required: true
       responses:
         "200":
           description: Successful operation
           content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/UasType'
             application/json:
               schema:
                 $ref: '#/components/schemas/UasType'
@@ -79,20 +70,11 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/UasType'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/UasType'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/UasType'
         required: true
       responses:
         "200":
           description: Successful operation
           content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/UasType'
             application/json:
               schema:
                 $ref: '#/components/schemas/UasType'
@@ -126,11 +108,6 @@ paths:
         "200":
           description: successful operation
           content:
-            application/xml:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/UasType'
             application/json:
               schema:
                 type: array
@@ -142,40 +119,23 @@ paths:
       - registry_auth:
         - write:uasTypes
         - read:uasTypes
-  /uasType/findByTags:
+  /uasType/find:
     get:
       tags:
       - uas_types
-      summary: Finds UasTypes by tags
-      description: "Multiple tags can be provided with comma separated strings. Use\
-        \ tag1, tag2, tag3 for testing."
-      operationId: findUasTypesByTags
-      parameters:
-      - name: tags
-        in: query
-        description: Tags to filter by
-        required: false
-        explode: true
-        schema:
-          type: array
-          items:
-            type: string
+      summary: Finds UasTypes
+      operationId: findUasTypes
       responses:
         "200":
           description: successful operation
           content:
-            application/xml:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/UasType'
             application/json:
               schema:
                 type: array
                 items:
                   $ref: '#/components/schemas/UasType'
         "400":
-          description: Invalid tag value
+          description: Invalid value
       security:
       - registry_auth:
         - write:uasTypes
@@ -193,15 +153,12 @@ paths:
         description: ID of uasType to return
         required: true
         schema:
-          type: integer
-          format: int64
+          type: string
+          format: uuid
       responses:
         "200":
           description: successful operation
           content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/UasType'
             application/json:
               schema:
                 $ref: '#/components/schemas/UasType'
@@ -226,8 +183,8 @@ paths:
         description: ID of uasType that needs to be updated
         required: true
         schema:
-          type: integer
-          format: int64
+          type: string
+          format: uuid
       - name: name
         in: query
         description: Name of uasType that needs to be updated
@@ -263,8 +220,8 @@ paths:
         description: UasType id to delete
         required: true
         schema:
-          type: integer
-          format: int64
+          type: string
+          format: uuid
       responses:
         "400":
           description: Invalid uasType value
@@ -285,8 +242,8 @@ paths:
         description: ID of uasType to update
         required: true
         schema:
-          type: integer
-          format: int64
+          type: string
+          format: uuid
       - name: additionalMetadata
         in: query
         description: Additional Metadata
@@ -310,102 +267,6 @@ paths:
       - registry_auth:
         - write:uasTypes
         - read:uasTypes
-  /store/inventory:
-    get:
-      tags:
-      - store
-      summary: Returns uasType inventories by status
-      description: Returns a map of status codes to quantities
-      operationId: getInventory
-      responses:
-        "200":
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                type: object
-                additionalProperties:
-                  type: integer
-                  format: int32
-      security:
-      - api_key: []
-  /store/order:
-    post:
-      tags:
-      - store
-      summary: Place an order for a uasType
-      description: Place a new order in the store
-      operationId: placeOrder
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Order'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/Order'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/Order'
-      responses:
-        "200":
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Order'
-        "405":
-          description: Invalid input
-  /store/order/{orderId}:
-    get:
-      tags:
-      - store
-      summary: Find purchase order by ID
-      description: For valid response try integer IDs with value <= 5 or > 10. Other
-        values will generate exceptions.
-      operationId: getOrderById
-      parameters:
-      - name: orderId
-        in: path
-        description: ID of order that needs to be fetched
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        "200":
-          description: successful operation
-          content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Order'
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Order'
-        "400":
-          description: Invalid ID supplied
-        "404":
-          description: Order not found
-    delete:
-      tags:
-      - store
-      summary: Delete purchase order by ID
-      description: For valid response try integer IDs with value < 1000. Anything
-        above 1000 or nonintegers will generate API errors
-      operationId: deleteOrder
-      parameters:
-      - name: orderId
-        in: path
-        description: ID of the order that needs to be deleted
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        "400":
-          description: Invalid ID supplied
-        "404":
-          description: Order not found
   /user:
     post:
       tags:
@@ -419,20 +280,11 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/User'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/User'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/User'
       responses:
         default:
           description: successful operation
           content:
             application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-            application/xml:
               schema:
                 $ref: '#/components/schemas/User'
   /user/createWithList:
@@ -453,9 +305,6 @@ paths:
         "200":
           description: Successful operation
           content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/User'
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
@@ -496,9 +345,6 @@ paths:
                 type: string
                 format: date-time
           content:
-            application/xml:
-              schema:
-                type: string
             application/json:
               schema:
                 type: string
@@ -533,9 +379,6 @@ paths:
         "200":
           description: successful operation
           content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/User'
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
@@ -562,12 +405,6 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/User'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/User'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/User'
       responses:
         default:
           description: successful operation
@@ -591,74 +428,13 @@ paths:
           description: User not found
 components:
   schemas:
-    Order:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 10
-        uasTypeId:
-          type: integer
-          format: int64
-          example: 198772
-        quantity:
-          type: integer
-          format: int32
-          example: 7
-        shipDate:
-          type: string
-          format: date-time
-        status:
-          type: string
-          description: Order Status
-          example: approved
-          enum:
-          - placed
-          - approved
-          - delivered
-        complete:
-          type: boolean
-      xml:
-        name: order
-    Customer:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 100000
-        username:
-          type: string
-          example: fehguy
-        address:
-          type: array
-          xml:
-            name: addresses
-            wrapped: true
-          items:
-            $ref: '#/components/schemas/Address'
-      xml:
-        name: customer
-    Category:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 1
-        name:
-          type: string
-          example: Dogs
-      xml:
-        name: category
     User:
       type: object
       properties:
         id:
           type: string
           format: uuid
-          example: 10
+          example: "e66b7c9e-79f5-44b0-9642-59ca20b7af63"
         username:
           type: string
           example: theUser
@@ -673,7 +449,7 @@ components:
           example: john@email.com
         phone:
           type: string
-          example: "12345"
+          example: "+919999999999"
         userStatus:
           type: integer
           description: User Status
@@ -685,16 +461,6 @@ components:
         - email
         - firstName
         - lastName
-    Tag:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        name:
-          type: string
-      xml:
-        name: tag
     UasType:
       type: object
       properties:
@@ -707,16 +473,28 @@ components:
           $ref: '#/components/schemas/Manufacturer'
         propulsionCategory:
           $ref: '#/components/schemas/UasPropulsionCategory'
-        mass:
+        weightCategory:
+          $ref: '#/components/schemas/UasWeightCategory'
+        mtow:
           type: number
-          format: integer
-          description: maximum take off mass in grams
+          format: float
+          description: maximum take off weight in kilograms
+        photoUrl:
+          type: string
+          format: uri
+          maxLength: 512
+        supportedOperationCategories:
+          type: array
+          items:
+            $ref: '#/components/schemas/OperationCategory'
       required:
         - id
         - manufacturer
-        - mass
         - modelNumber
         - propulsionCategory
+        - weightCategory
+        - mtow
+        - supportedOperationCategories
     ApiResponse:
       type: object
       properties:
@@ -727,8 +505,12 @@ components:
           type: string
         message:
           type: string
-      xml:
-        name: '##default'
+    OperationCategory:
+      type: string
+      enum:
+        - C1
+        - C2
+        - C3
     UasWeightCategory:
       type: string
       enum:
@@ -774,7 +556,7 @@ components:
         - UTTARAKHAND
         - UTTAR_PRADESH
         - WEST_BENGAL
-        - ANDAMAN_AND_NICOBAR_ISLANDS
+        - ANDAMAN_NICOBAR_ISLANDS
         - CHANDIGARH
         - DADRA_NAGAR_HAVELI_DAMAN_DIU
         - NCT
@@ -846,6 +628,27 @@ components:
       required:
         - id
         - legalEntity
+        - validFrom
+        - validTill
+    CivilAviationAuthority:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        legalEntity:
+          $ref: '#/components/schemas/LegalEntity'
+        validFrom:
+          type: string
+          format: date-time
+        validTill:
+          type: string
+          format: date-time
+      required:
+        - id
+        - legalEntity
+        - validFrom
+        - validTill
     Operator:
       type: object
       properties:
@@ -863,6 +666,8 @@ components:
       required:
         - id
         - legalEntity
+        - validFrom
+        - validTill
   requestBodies:
     UserArray:
       description: List of user object
