# docs/demo/src/main/java/in/ispirt/pushpaka/registry/models/Order.java
@@ -1,258 +1,0 @@
-package in.ispirt.pushpaka.registry.models;
-
-import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonValue;
-import io.swagger.v3.oas.annotations.media.Schema;
-import java.net.URI;
-import java.time.OffsetDateTime;
-import java.time.OffsetDateTime;
-import java.util.*;
-import java.util.Objects;
-import javax.annotation.Generated;
-import javax.validation.Valid;
-import javax.validation.constraints.*;
-import org.openapitools.jackson.nullable.JsonNullable;
-import org.springframework.format.annotation.DateTimeFormat;
-
-/**
- * Order
- */
-
-@Generated(
-  value = "org.openapitools.codegen.languages.SpringCodegen",
-  date = "2023-09-07T16:15:58.556735+05:30[Asia/Kolkata]"
-)
-public class Order {
-  private Long id;
-
-  private Long uasTypeId;
-
-  private Integer quantity;
-
-  @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME)
-  private OffsetDateTime shipDate;
-
-  /**
-   * Order Status
-   */
-  public enum StatusEnum {
-    PLACED("placed"),
-
-    APPROVED("approved"),
-
-    DELIVERED("delivered");
-
-    private String value;
-
-    StatusEnum(String value) {
-      this.value = value;
-    }
-
-    @JsonValue
-    public String getValue() {
-      return value;
-    }
-
-    @Override
-    public String toString() {
-      return String.valueOf(value);
-    }
-
-    @JsonCreator
-    public static StatusEnum fromValue(String value) {
-      for (StatusEnum b : StatusEnum.values()) {
-        if (b.value.equals(value)) {
-          return b;
-        }
-      }
-      throw new IllegalArgumentException("Unexpected value '" + value + "'");
-    }
-  }
-
-  private StatusEnum status;
-
-  private Boolean complete;
-
-  public Order id(Long id) {
-    this.id = id;
-    return this;
-  }
-
-  /**
-   * Get id
-   * @return id
-   */
-
-  @Schema(name = "id", example = "10", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-  @JsonProperty("id")
-  public Long getId() {
-    return id;
-  }
-
-  public void setId(Long id) {
-    this.id = id;
-  }
-
-  public Order uasTypeId(Long uasTypeId) {
-    this.uasTypeId = uasTypeId;
-    return this;
-  }
-
-  /**
-   * Get uasTypeId
-   * @return uasTypeId
-   */
-
-  @Schema(
-    name = "uasTypeId",
-    example = "198772",
-    requiredMode = Schema.RequiredMode.NOT_REQUIRED
-  )
-  @JsonProperty("uasTypeId")
-  public Long getUasTypeId() {
-    return uasTypeId;
-  }
-
-  public void setUasTypeId(Long uasTypeId) {
-    this.uasTypeId = uasTypeId;
-  }
-
-  public Order quantity(Integer quantity) {
-    this.quantity = quantity;
-    return this;
-  }
-
-  /**
-   * Get quantity
-   * @return quantity
-   */
-
-  @Schema(
-    name = "quantity",
-    example = "7",
-    requiredMode = Schema.RequiredMode.NOT_REQUIRED
-  )
-  @JsonProperty("quantity")
-  public Integer getQuantity() {
-    return quantity;
-  }
-
-  public void setQuantity(Integer quantity) {
-    this.quantity = quantity;
-  }
-
-  public Order shipDate(OffsetDateTime shipDate) {
-    this.shipDate = shipDate;
-    return this;
-  }
-
-  /**
-   * Get shipDate
-   * @return shipDate
-   */
-  @Valid
-  @Schema(name = "shipDate", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-  @JsonProperty("shipDate")
-  public OffsetDateTime getShipDate() {
-    return shipDate;
-  }
-
-  public void setShipDate(OffsetDateTime shipDate) {
-    this.shipDate = shipDate;
-  }
-
-  public Order status(StatusEnum status) {
-    this.status = status;
-    return this;
-  }
-
-  /**
-   * Order Status
-   * @return status
-   */
-
-  @Schema(
-    name = "status",
-    example = "approved",
-    description = "Order Status",
-    requiredMode = Schema.RequiredMode.NOT_REQUIRED
-  )
-  @JsonProperty("status")
-  public StatusEnum getStatus() {
-    return status;
-  }
-
-  public void setStatus(StatusEnum status) {
-    this.status = status;
-  }
-
-  public Order complete(Boolean complete) {
-    this.complete = complete;
-    return this;
-  }
-
-  /**
-   * Get complete
-   * @return complete
-   */
-
-  @Schema(name = "complete", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-  @JsonProperty("complete")
-  public Boolean getComplete() {
-    return complete;
-  }
-
-  public void setComplete(Boolean complete) {
-    this.complete = complete;
-  }
-
-  @Override
-  public boolean equals(Object o) {
-    if (this == o) {
-      return true;
-    }
-    if (o == null || getClass() != o.getClass()) {
-      return false;
-    }
-    Order order = (Order) o;
-    return (
-      Objects.equals(this.id, order.id) &&
-      Objects.equals(this.uasTypeId, order.uasTypeId) &&
-      Objects.equals(this.quantity, order.quantity) &&
-      Objects.equals(this.shipDate, order.shipDate) &&
-      Objects.equals(this.status, order.status) &&
-      Objects.equals(this.complete, order.complete)
-    );
-  }
-
-  @Override
-  public int hashCode() {
-    return Objects.hash(id, uasTypeId, quantity, shipDate, status, complete);
-  }
-
-  @Override
-  public String toString() {
-    StringBuilder sb = new StringBuilder();
-    sb.append("class Order {\n");
-    sb.append("    id: ").append(toIndentedString(id)).append("\n");
-    sb.append("    uasTypeId: ").append(toIndentedString(uasTypeId)).append("\n");
-    sb.append("    quantity: ").append(toIndentedString(quantity)).append("\n");
-    sb.append("    shipDate: ").append(toIndentedString(shipDate)).append("\n");
-    sb.append("    status: ").append(toIndentedString(status)).append("\n");
-    sb.append("    complete: ").append(toIndentedString(complete)).append("\n");
-    sb.append("}");
-    return sb.toString();
-  }
-
-  /**
-   * Convert the given object to string with each line indented by 4 spaces
-   * (except the first line).
-   */
-  private String toIndentedString(Object o) {
-    if (o == null) {
-      return "null";
-    }
-    return o.toString().replace("\n", "\n    ");
-  }
-}
